[package]
name = "udp-playground"
version = "0.1.0"
authors = ["brendan-bormann <brendan.bormann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
rmp-serde = "0.15.0"